<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:onClick="somar"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="421dp"
        android:layout_height="65dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view_main1"
        android:layout_width="429dp"
        android:layout_height="8dp"
        android:background="@color/azul_escuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="421dp"
        android:layout_height="65dp"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view_main2"
            android:layout_width="429dp"
            android:layout_height="8dp"
            android:background="@color/azul_escuro" />

        <TextView
            android:id="@+id/tv_footer"
            android:layout_width="211dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/fecap"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="408dp"
        android:layout_height="309dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_main1">

        <CheckBox
            android:id="@+id/arroz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/azul_checkbox"
            android:fontFamily="monospace"
            android:text="@string/arroz"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/leite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/azul_checkbox"
            android:fontFamily="monospace"
            android:text="@string/leite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/carne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/azul_checkbox"
            android:fontFamily="monospace"
            android:text="@string/carne"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/feijao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/azul_checkbox"
            android:fontFamily="monospace"
            android:text="@string/feijao"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/refri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/azul_checkbox"
            android:fontFamily="monospace"
            android:text="@string/refri"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/macarrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/azul_checkbox"
            android:fontFamily="monospace"
            android:text="@string/macarrao"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnTotal"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/azul_claro"
        android:fontFamily="monospace"
        android:onClick="somar"
        android:text="@string/btnMain"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="monospace"
        android:text="@string/res"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTotal"
        app:layout_constraintVertical_bias="0.361" />


</androidx.constraintlayout.widget.ConstraintLayout>